Added rotor constructors, set up the initial position functionality

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Enigma)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Enigma main.cpp InputProcessor.cpp InputProcessor.h Rotors.h)
+add_executable(Enigma main.cpp InputProcessor.cpp InputProcessor.h Rotors.h Rotors.cpp)
